faced bug // animation doesn't work on IOS devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,49 @@
 body{
   background-color: #FFF0E0;
+  
 }
 
-.d{
+.section1{
   z-index: -9999;
+  height: 100vh;
 }
 
 .work_button{
-  
+  z-index: 9999;
+  position: absolute;
+  top: 80%;
+  left: 47%;
+ background-color:transparent;
+	border-radius:28px;
+	border: 1px solid black;
+	display:inline-block;
+	cursor:pointer;
+	color: black;
+
+	font-size:40px;
+	padding: 3px 13px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px black;
+  transition: all 0.2s ease;
+}
+
+.work_button:hover{
+
+    background-color: #F58089;
+    border: 1px solid white;
+
+}
+
+#section2{
+   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+
+
+}
+
+.links{
+  font-size: 50px;
 }
